# custom-bert-pretraining

./: .gitignore  LICENSE  README.md  pyproject.toml
models/tokenizer/: tokenizer.json  vocab.txt
notebooks/: inspect.ipynb
scripts/: create_tokenizer.py  download_dataset.py  preprocess_data.py  split_dataset.py
